--- a/styles.css
+++ b/styles.css
@@ -1,33 +1,45 @@
 /* background and default styles */
-body{
-    background-color: rgb(0, 0, 0);
+body {
+  background-color: rgb(0, 0, 0);
 }
 
 /* phones and smaller screens */
-@media only screen and (max-width: 768px) {
-
-}
+@media only screen and (max-width: 768px) {}
 
 /* laptops and larger screens */
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 768px) {}
 
-}
 /* div seperation of header */
 
-.topnav a {
-    display:flex;
-    float: right;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 30px 16px;
-    text-decoration: none;
-    font-size: 20px;
-  }
+.nav {
+  background-color: black;
+  width: 100vw;
+  height: 8vw;
+  position: fixed;
+}
 
-  .topnav a:hover {
-    background-color: #ddd;
-    color: black;
-  }
+.nav-link-container {
+  display: flex;
+  height: 100%;
+  float: right;
+  background-color: none;
+  align-items: center;
+  padding: 0;
+  margin-right: 2vw;
+}
 
-/* colours */
-p {color:beige} 
+.nav-link-container a {
+  padding-top: 1vw;
+  padding-bottom: 1vw;
+  padding-right: 1vw;
+  padding-left: 1vw;
+  color: #f2f2f2;
+  text-decoration: none;
+  font-size: 3vw;
+  font-family: Georgia, 'Times New Roman', Times, serif
+}
+
+.nav-link-container a:hover {
+  background-color: #ddd;
+  color: black;
+}
